Update MacOs version of the sample to match the current state of OpenGL.