@@ -1,5 +1,5 @@
-jextract --source -t opengl -lGL -l/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT \
-  -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/ \
+jextract -t opengl -l :/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT \
+  -l :/System/Library/Frameworks/OpenGL.framework/Versions/Current/OpenGL \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/GLUT.framework/Headers/glut.h
 
-javac --enable-preview --source=22 opengl/*.java
+javac opengl/*.java
